--- a/src/main/resources/templates/customerCenter/notice.html
+++ b/src/main/resources/templates/customerCenter/notice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +14,7 @@
 <body>
     <!-- 헤더  -->
     <div>
-        <header></header>
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
     
     
     <!-- 내용 -->
@@ -170,21 +171,8 @@
             </div>
         
         <!-- footer -->
-        <footer></footer>
+        <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     </div>
 </body>
-<script>
-/* 외부 html 파일 불러오기 */
-const header = document.querySelector('header');
-const footer = document.querySelector('footer');
-
-
-fetch('/templates/main/header.html')
-.then(res => res.text())
-.then(data => header.innerHTML = data);
-
-fetch('/templates/main/footer.html')
-.then(res => res.text())
-.then(data => footer.innerHTML = data);
-</script>    
+<script src="/js/main/header.js"></script>
 </html>
