--- a/src/main/resources/templates/support/support-rice-modal.html
+++ b/src/main/resources/templates/support/support-rice-modal.html
@@ -18,13 +18,13 @@
                 </div>
                     <div class="">
                         <input type="text" placeholder="공양미 입력"  class="rice-payment-input" value="">
-                        <!-- <div class="error-message">비워둘 수 없습니다.</div> -->
+                        <!-- <div class="error-message"></div> -->
                         <p>후원 가능한 공양미: <em>300</em>석</p>
                     </div>
 
                 </div>
                 <div class="support-pay-layout">
-                    <button type="button">
+                    <button type="button" class="btn-rice">
                         <span>확인</span>
                     </button>
                 </div>
