--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>소통하고 전달하기 - 텀블벅 헬프센터</title>
-    <link rel="stylesheet" href="../../static/css/customerCenter/faq.css">
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/css/customerCenter/faq.css">
+    <link rel="stylesheet" href="/css/font/font.css">
 
 </head>
 <body>
     <div class="full-screen">
 
         <!-- 헤더 임시 -->
-        <header id="_header"></header>
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
 
 
 
@@ -106,13 +106,9 @@
 
 
     <!-- 푸터 임시 -->
-    <footer id="_footer"></footer>
+    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
+<script src="/js/main/header.js"></script>
+
 </html>
