--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>후원 상세보기</title>
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/support/support-detail.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/support/support-detail.css">
 </head>
 <body class="full">
-    <header id="_header"></header>
-    <div id="wrap">
+<header th:insert="~{main/header.html :: mainHeader}"></header>
+
+<div id="wrap">
         <div id="container">
             <div class="collect-wrap">
                 <div class="collect-content">
@@ -82,22 +83,22 @@
                                 <ul>
                                     <li class="on">
                                         <button href="#">
-                                            <img class="img-div" src="../../static/image/notice/rag_doll_tumbnail.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                            <img class="img-div" src="/image/notice/rag_doll_tumbnail.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
                                         </button>
                                     </li>
                                     <li class="on">
                                         <button href="#">
-                                            <img class="img-div" src="../../static/image/main/001.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                            <img class="img-div" src="image/main/001.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
                                         </button>
                                     </li>
                                     <li class="on">
                                         <button href="#">
-                                            <img class="img-div" src="../../static/image/main/002.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                            <img class="img-div" src="/image/main/002.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
                                         </button>
                                     </li>
                                     <li class="on">
                                         <button href="#">
-                                            <img class="img-div" src="../../static/image/main/003.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                            <img class="img-div" src="/image/main/003.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
                                         </button>
                                     </li>
                                 </ul>
@@ -421,14 +422,10 @@
             </div>
         </div>
     </div>
-    <footer id="_footer"></footer>
+<footer th:insert="~{main/footer.html :: mainFooter}"></footer>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="../../static/js/support/supportDetail.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
+<script src="/js/main/header.js"></script>
 </html>
