--- a/src/main/resources/templates/support/support-success.html
+++ b/src/main/resources/templates/support/support-success.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>후원 완료</title>
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/funding/funding-result.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/funding/funding-result.css">
 </head>
 
 <body>
@@ -86,18 +87,19 @@
                     </div>
                 </div>
             </div>
-            <footer id="_footer"></footer>
-            
+<!--            <footer th:insert="~{main/footer.html :: mainFooter}"></footer>-->
+
+
         </div>
         <div class="common-Layer tbb"></div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $("#_header").load("../main/header.html");
-        $("#_footer").load("../main/footer.html");
-    });
-</script>
+<!--<script>-->
+<!--    $(document).ready(function () {-->
+<!--        $("#_header").load("../main/header.html");-->
+<!--        $("#_footer").load("../main/footer.html");-->
+<!--    });-->
+<!--</script>-->
 
 </html>
