--- a/src/main/resources/templates/mypage/mypage-header.html
+++ b/src/main/resources/templates/mypage/mypage-header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
 </head>
 <body>
-    <div class="mypage-header-wrap">
+    <div th:fragment="mypageHeader" class="mypage-header-wrap">
         <div class="mypage-header-container">
             <div class="mypage-header">
                 <div class="mypage-header-left">
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="rice-charge-wrap">
-                    <button class="rice-charge">
+                    <button type="button" class="rice-charge">
                         <div class="rice-charge-text">공양미 충전</div>
                     </button>
                 </div>
@@ -34,47 +34,47 @@
                 <div class="header-menu-inner">
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">후원 요청 목록</a>
+                            <a href="/mypage/support-request" class="header-menu-a">후원 요청 목록</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">작성한 후기</a>
+                            <a href="/mypage/my-review" class="header-menu-a">작성한 후기</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">내 문의사항</a>
+                            <a href="/mypage/my-question" class="header-menu-a">내 문의사항</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">봉사활동 내역</a>
+                            <a href="/mypage/volunteer-work-list" class="header-menu-a">봉사활동 내역</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">후원내역</a>
+                            <a href="/mypage/my-support-list" class="header-menu-a">후원내역</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">펀딩내역</a>
+                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a">공양미 내역</a>
+                            <a href="/mypage/rice-list" class="header-menu-a">공양미 내역</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a-select">공양미 환전요청</a>
+                            <a href="/mypage/exchange-request" class="header-menu-a-select">공양미 환전요청</a>
                         </div>
                     </span>
                     <span class="header-menu-element">
                         <div class="header-menu-div">
-                            <a href="" class="header-menu-a-select">회원정보 수정</a>
+                            <a href="/mypage/user-modify" class="header-menu-a-select">회원정보 수정</a>
                         </div>
                     </span>
                 </div>
@@ -82,4 +82,6 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="/js/mypage/mypage-header.js"></script>
 </html>
