서현 컨트롤러 커밋

--- a/src/main/resources/templates/community/free-board.html
+++ b/src/main/resources/templates/community/free-board.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body">
     <!-- 헤더 -->
-    <header th:insert="~{main/header.html :: mainHeader}"></header>
+    <header id="_header"></header>
 
     <!-- 전체 div -->
     <div style="min-height: 100%;">
@@ -398,12 +398,17 @@
             </div>
         </main>
     </div>
-    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
+    <<footer id="_footer"></footer>
 
     <!-- 푸터 -->
     <!-- <footer id="_footer"></footer> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="/js/main/header.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#_header").load("../main/header.html");
+        $("#_footer").load("../main/footer.html");
+    });
+</script>
 <script src="/js/community/free-board.js"></script>
 </html>
