--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- 헤더 -->
-    <header th:insert="~{main/header.html :: mainHeader}"></header>
+    <header id="_header"></header>
     <!-- 전체 div -->
     <div class="board">
         <section class="board-container">
